earth data, fixed randombutton mobile

--- a/src/routes/own-planet/own-planet.styles.css
+++ b/src/routes/own-planet/own-planet.styles.css
@@ -62,7 +62,8 @@
 
 .random-cont {
     position: relative;
-    left: 33rem;
+    left: 31rem;
+    top: 3rem;
     display: flex;
     place-items: center;
     width: 100px;
@@ -97,6 +98,8 @@
 
     .random-cont {
         left: 22rem;
+        top: 2rem;
+
     }
 }
 
@@ -133,5 +136,6 @@
 
     .random-cont {
         left: 15rem;
+        top: 0rem;
     }
 }
